cmake_minimum_required (VERSION 2.8) 
project (track)
set(raspicam_DIR "/home/pi/Desktop/raspicam-0.1.6/build/")
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV")
add_executable (track src/track.cpp)  
target_link_libraries (track ${raspicam_CV_LIBS})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN SYSTEM")
ENDIF()
